--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "html": "copyfiles --u 1 src/public/*.html dist",
+    "build": "tsc && npm run html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.1",
+    "copyfiles": "^2.1.0",
     "express": "^4.16.4"
   }
 }
