--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.1",
+    "@types/mysql": "^2.15.6",
     "copyfiles": "^2.1.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "github:mysqljs/mysql"
   }
 }
